--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div>
-    <%= form.label :type, style: "display: block" %>
-    <%= form.text_field :type %>
+    <%= form.label :activity_type, style: "display: block" %>
+    <%= form.text_field :activity_type %>
   </div>
 
   <div>
