--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -3,8 +3,11 @@
 <% content_for :title, "Activities" %>
 
 <div class="container mx-auto p-4">
+  
   <h1 class="text-2xl font-bold mb-6">Activities</h1>
-
+  <div class="mb-6">
+    <%= button_to "Import", activities_path, method: :post, class: "px-4 py-2 bg-orange-200 text-orange-800 rounded-lg hover:bg-orange-300" %>
+  </div>
   <div class="mb-6">
     <%= form_with(url: activities_path, method: :get, class: "flex gap-2") do |f| %>
       <%= f.search_field :query, 
