--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -5,9 +5,11 @@
     <% end %>
 
     <%= render @plan %>
+    <% training_start_date = @plan.race_date - 17.weeks %>
 
     <div class="mt-8">
       <div class="grid grid-cols-8 gap-2">
+        <%# Header row %>
         <div class="col-span-1"></div>
         <div class="font-semibold text-center">Monday</div>
         <div class="font-semibold text-center">Tuesday</div>
@@ -17,16 +19,32 @@
         <div class="font-semibold text-center">Saturday</div>
         <div class="font-semibold text-center">Sunday</div>
 
+        <%# Calendar grid %>
         <% training_start_date = @plan.race_date - 17.weeks %>
         <% training_start_date = training_start_date.beginning_of_week %>
         
         <% 18.times do |week| %>
           <% week_start = training_start_date + (week * 7) %>
+          <%# Date column - not draggable %>
           <div class="font-medium text-sm py-2"><%= week_start.strftime("%m/%d") %></div>
           
-          <% 7.times do |day| %>
-            <div class="h-24 bg-gray-100 rounded-lg"></div>
-          <% end %>
+          <%# Draggable cells container %>
+          <div class="col-span-7" data-controller="drag">
+            <div class="grid grid-cols-7 gap-2" data-drag-target="container">
+              <% 7.times do |day| %>
+                <div class="h-24 bg-gray-100 rounded-lg p-2 transition-all duration-200 ease-in-out" 
+                     data-drag-target="item"
+                     data-cell-target="wrapper"
+                     data-date="<%= (week_start + day.days).to_s %>"
+                     data-controller="cell">
+                  <div class="h-full w-full focus:outline-none"
+                       data-cell-target="content"
+                       data-action="click->cell#edit blur->cell#save"
+                       contenteditable="true"></div>
+                </div>
+              <% end %>
+            </div>
+          </div>
         <% end %>
       </div>
     </div>
