--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -11,3 +11,12 @@
 }
 
 */
+
+.logo-text {
+  font-family: 'Borel', cursive;
+  font-size: 2.5rem;
+  position: absolute;
+  top: 0;
+  left: 1rem;  /* Add left spacing */
+  padding: 1rem;
+}
