--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -3,21 +3,34 @@
     <% if notice.present? %>
       <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
     <% end %>
+    <div class="flex flex-row items-center gap-2">
+      <%= link_to "Edit this plan", edit_plan_path(@plan), class: "rounded-lg py-2 px-4 bg-gray-100 inline-block font-medium text-sm" %>
+      <%= link_to "Back to plans", plans_path, class: "rounded-lg py-2 px-4 bg-gray-100 inline-block font-medium text-sm" %>
+      <%= button_to "Destroy this plan", @plan, method: :delete, class: "rounded-lg py-2 px-4 bg-red-100 font-medium text-sm" %>
+    </div>
+
+    
 
     <%= render @plan %>
     <% training_start_date = @plan.race_date - 17.weeks %>
 
-    <div class="mt-8">
+    <div class="mt-8" data-controller="edit-mode">
+      <button data-action="click->edit-mode#toggle" 
+              data-edit-mode-target="button"
+              class="mb-4 rounded-lg py-2 px-4 bg-blue-100 font-medium text-sm">
+        Enable Edit Mode
+      </button>
+
       <div class="grid grid-cols-8 gap-2">
         <%# Header row %>
         <div class="col-span-1"></div>
-        <div class="font-semibold text-center">Monday</div>
-        <div class="font-semibold text-center">Tuesday</div>
-        <div class="font-semibold text-center">Wednesday</div>
-        <div class="font-semibold text-center">Thursday</div>
-        <div class="font-semibold text-center">Friday</div>
-        <div class="font-semibold text-center">Saturday</div>
-        <div class="font-semibold text-center">Sunday</div>
+        <div class="font-semibold text-center">M</div>
+        <div class="font-semibold text-center">Tu</div>
+        <div class="font-semibold text-center">W</div>
+        <div class="font-semibold text-center">Th</div>
+        <div class="font-semibold text-center">F</div>
+        <div class="font-semibold text-center">Sa</div>
+        <div class="font-semibold text-center">Su</div>
 
         <%# Calendar grid %>
         <% training_start_date = @plan.race_date - 17.weeks %>
@@ -30,29 +43,26 @@
           
           <%# Draggable cells container %>
           <div class="col-span-7" data-controller="drag">
-            <div class="grid grid-cols-7 gap-2" data-drag-target="container">
+            <div class="grid grid-cols-7 gap-2" 
+                 data-drag-target="container"
+                 data-week="<%= week %>">
               <% 7.times do |day| %>
-                <div class="h-24 bg-gray-100 rounded-lg p-2 transition-all duration-200 ease-in-out" 
+                <div class="h-24 aspect-square bg-gray-100 rounded-lg p-2 transition-all duration-200 ease-in-out" 
                      data-drag-target="item"
                      data-cell-target="wrapper"
+                     data-edit-mode-target="cell"
                      data-date="<%= (week_start + day.days).to_s %>"
                      data-controller="cell">
                   <div class="h-full w-full focus:outline-none"
                        data-cell-target="content"
                        data-action="click->cell#edit blur->cell#save"
-                       contenteditable="true"></div>
+                       contenteditable="false"></div>
                 </div>
               <% end %>
             </div>
           </div>
         <% end %>
       </div>
-    </div>
-
-    <%= link_to "Edit this plan", edit_plan_path(@plan), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to "Back to plans", plans_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this plan", @plan, method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
     </div>
   </div>
 </div>
