--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,16 @@
   </head>
 
   <body>
-    <h1 class="font-borel text-4xl absolute top-0 left-4 p-4">lace</h1>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <nav class="bg-indigo-600 py-2 px-4">
+      <div class="container flex justify-between items-center">
+        <h1 class="text-xl text-white">lace 👟</h1>
+        <div class="flex items-center space-x-4">
+          <%= link_to "Plans", plans_path, class: "text-white hover:bg-indigo-800 px-3 py-2 rounded-md text-sm font-medium" %>
+          <%= link_to "Activities", activities_path, class: "text-white hover:bg-indigo-800 px-3 py-2 rounded-md text-sm font-medium" %>
+        </div>
+      </div>
+    </nav>
+    <main class="container mx-auto mt-8 px-5 flex">
       <%= yield %>
     </main>
   </body>
