--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -14,13 +14,12 @@
     <%= render @plan %>
     <% training_start_date = @plan.race_date - 17.weeks %>
 
-    <div class="mt-8" data-controller="edit-mode">
+    <div class="mt-8 mb-4" data-controller="edit-mode">
       <button data-action="click->edit-mode#toggle" 
               data-edit-mode-target="button"
               class="mb-4 rounded-lg py-2 px-4 bg-blue-100 font-medium text-sm">
         Enable Edit Mode
       </button>
-
       <div class="grid grid-cols-8 gap-2">
         <%# Header row %>
         <div class="col-span-1"></div>
