Show page shows and allows updates to activities via Stimulus

--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -12,8 +12,7 @@
   <% end %>
 
   <div class="my-5">
-    <%= form.label :length %>
-    <%= form.number_field :length, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <h1>Length: 18 weeks</h1>
   </div>
 
   <div class="my-5">
