Add sign out test for oauth system test

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
           <%= link_to "Activities", activities_path, class: "text-white hover:bg-indigo-800 px-3 py-2 rounded-md text-sm font-medium" %>
           <% if authenticated? %>
             <%= button_to "Sign out", session_path, method: :delete, class: "text-white hover:bg-indigo-800 px-3 py-2 rounded-md text-sm font-medium" %>
-          <% elsif !current_page?(new_session_path) %>
+          <% elsif !authenticated? && !current_page?(new_session_path) %>
             <%= link_to "Sign in", new_session_path, class: "text-white hover:bg-indigo-800 px-3 py-2 rounded-md text-sm font-medium" %>
           <% end %>
         </div>
