--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -1,9 +1,11 @@
 <%= form_with(model: plan, class: "contents") do |form| %>
   <% if plan.errors.any? %>
-    <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2><%= pluralize(plan.errors.count, "error") %> prohibited this plan from being saved:</h2>
+    <div class="bg-red-50 p-4 rounded-lg mb-6">
+      <h2 class="text-lg font-medium text-red-600 mb-2">
+        <%= pluralize(plan.errors.count, "error") %> prohibited this plan from being saved:
+      </h2>
 
-      <ul>
+      <ul class="list-disc pl-5 text-red-500">
         <% plan.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
@@ -11,16 +13,19 @@
     </div>
   <% end %>
 
-  <div class="my-5">
-    <h1>Length: 18 weeks</h1>
-  </div>
+  <div class="space-y-6">
+    <div>
+      <%= form.label :length, class: "block text-sm font-bold text-slate-700 mb-2" %>
+      <%= form.number_field :length, class: "block w-full rounded-md border-slate-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 text-base py-3 px-4" %>
+    </div>
 
-  <div class="my-5">
-    <%= form.label :race_date %>
-    <%= form.date_field :race_date, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
+    <div>
+      <%= form.label :race_date, class: "block text-sm font-bold text-slate-700 mb-2" %>
+      <%= form.date_field :race_date, class: "block w-full rounded-md border-slate-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 text-base py-3 px-4" %>
+    </div>
 
-  <div class="inline">
-    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <div class="mt-8">
+      <%= form.submit class: "w-full rounded-md bg-indigo-600 py-3 px-4 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition duration-300" %>
+    </div>
   </div>
 <% end %>
