--- a/app/views/plans/edit.html.erb
+++ b/app/views/plans/edit.html.erb
@@ -1,8 +1,25 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing plan</h1>
+  <% if notice.present? %>
+    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+  <% end %>
 
-  <%= render "form", plan: @plan %>
+  <div class="text-center mb-8">
+    <h1 class="font-bold text-5xl text-slate-800 mb-4">Edit Your Plan</h1>
+    <p class="text-sm text-slate-600 mb-6 font-semibold">Update your training schedule</p>
+  </div>
 
-  <%= link_to "Show this plan", @plan, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to plans", plans_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <div class="bg-gradient-to-r from-blue-100 to-purple-100 p-6 rounded- shadow-md mb-8">
+    <div class="mb-2">
+      <h2 class="font-semibold text-2xl text-slate-700 mb-4">Modify Plan Details</h2>
+      
+      <div class="bg-white/60 rounded-lg p-3 shadow-sm">
+        <%= render "form", plan: @plan %>
+      </div>
+    </div>
+    
+    <div class="flex gap-3 mt-6">
+      <%= link_to "Back to plans", plans_path, class: "rounded-lg py-3 px-5 bg-slate-100 text-slate-700 font-medium hover:bg-slate-200 transition duration-300" %>
+      <%= link_to "View this plan", @plan, class: "rounded-lg py-3 px-5 bg-indigo-100 text-indigo-700 font-medium hover:bg-indigo-200 transition duration-300" %>
+    </div>
+  </div>
 </div>
