Add basic pagination with kaminari

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -41,5 +41,8 @@
         </div>
       <% end %>
     </div>
+    <div class="mt-6">
+      <%= paginate @activities %>
+    </div>
   </div>
 </div>
